# wasm-webidl-bindings

./: BINARY.md  Cargo.toml  README.md  azure-pipelines.yml
.github/workflows/: main.yml
crates/text-parser/: Cargo.toml
crates/text-parser/src/: actions.rs  error.rs  grammar.lalrpop  lexer.rs  lib.rs  parser.rs
src/: actions.rs  ast.rs  grammar.lalrpop  lib.rs  parser.rs  quickcheck.rs  text.rs
src/binary/: decode.rs  encode.rs  mod.rs
src/text/: actions.rs  grammar.lalrpop  mod.rs  parser.rs
