[package]
name = "wasm-webidl-bindings"
version = "0.1.0"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>", "The Rust and WebAssembly Working Group"]
edition = "2018"

[dependencies]
failure = "0.1.5"
leb128 = "0.2.4"
walrus = "0.7.0"
wasm-webidl-bindings-text-parser = { path = "crates/text-parser" }

[patch.crates-io]
wasm-webidl-bindings-text-parser = { path = "crates/text-parser" }

[workspace]
members = [
    "crates/text-parser"
]
