[package]
name = "wasm-webidl-bindings"
version = "0.1.1"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>", "The Rust and WebAssembly Working Group"]
edition = "2018"

[dependencies]
failure = "0.1.5"
leb128 = "0.2.4"
walrus = "0.8.0"
wasm-webidl-bindings-text-parser = { path = "crates/text-parser", optional = true }
id-arena = "2.2.1"
quickcheck = { version = "0.8.5", optional = true }
rand = { version = "0.6.5", optional = true }

[dev-dependencies]
lazy_static = "1.3.0"

[workspace]
members = [
    "crates/text-parser"
]

[features]
text = ['wasm-webidl-bindings-text-parser']
quickchecking = ['rand', 'quickcheck']
